fix header on small devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -510,7 +510,7 @@ pre code {
     margin-bottom: 30px;
   }
   .promo .title {
-    font-size: 64px;
+    font-size: 62px;
   }
   .promo .meta {
     margin-top: 60px;
